Adding Delete Endpoint to ChapterMember
